# MetadataGenerator

./: .gitignore  .readthedocs.yaml  README.md  get_metadata.py  glossary  metagen.bpmn  pyproject.toml  requirements.txt  runoff.ipynb  runoff_TUBAF.ipynb  soilpulse.sql  test_get_metadata.py
.github/workflows/: python-package.yml
SP_MYSQL/: compose.yml
catalogue/: README.md  example_TUBAF.json  possible_datasets.md
catalogue/105281zenodo6654150/: meta
catalogue/106094UNIFR151460/: meta
catalogue/temp_1/: primary_package.json
catalogue/temp_1/to_publish/: Publisher_metadata.json  pipe.txt  piped_package.json
catalogue/temp_2/: primary_package.json
catalogue/temp_2/to_publish/: Publisher_metadata.json  pipe.txt  piped_package.json
catalogue/temp_4/: fl_description.py  primary_package.json
catalogue/temp_4/to_publish/: pipe.txt  piped_package.json
database/: compose.yml  soilpulse.sql
docs/: glossary  requirements.txt
docs/source/: README.ipynb  README.md  application_examples.rst  conf.py  data_reusability.md  fair_world.rst  index.rst  requirement_template.ipynb
docs/source/FAIR_world/: concept_unit_method.md  metadata_analyses.md
scripts/: get_metadata.py
showcases/: README.md  concept_unit_method.md  metadata_analyses.md  requirement_template.ipynb
showcases/example_datasets/: README.md
soilpulse/: get_metadata.py
src/: main.py  soilpulse.sql
src/soilpulse/: crawlers.py  data_publishers.py  dataset_loader.py  db_access.py  exceptions.py  get_data.py  get_metadata.py  metadata_scheme.py  metadatascheme.py  project_management.py  resource_management.py  streamlit.py  xsd_handle.py
src/soilpulse-core/: entity_types  metadata_scheme.py
src/soilpulsecore/: db_access.py  exceptions.py  project_management.py  relationships.py
src/test_files/: test_import_concepts.json  test_import_methods.json  test_import_units.json
src/webapp/: SoilPulse.py  SoilPulse_middle.py  datapackage_handling.py  streamlit.py  streamlit_helper.py  tree3.py  unit_select.py
tests/: notest_get_metadata.py  test_DB.py  test_createDB  test_file_by_URL.py  test_file_upload.py  test_get_metadata.py  test_main.py  test_webapp.py
tests/testfiles/: multitable_empty_col.csv  test_import_concepts.json  test_import_methods.json  test_import_units.json  testdata.csv  testliteral.csv  testtexture.csv
(+53 files in other folders)
