[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soilpulse"
version = "0.0.1"
authors = [
  { name="Jan Devátý", email="jan.devaty@fsv.cvut.cz" },
  { name="Jonas Lenz", email="jonas.lenz@iproconsult.com" },
]
description = "SoilPulse metadata generator"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools.package-dir]
mypkg = "src/soilpulse"

[project.urls]
Homepage = "soilpulse.github.io"
Issues = "https://github.com/SoilPulse/MetadataGenerator/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"