[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soilpulse-core"
dynamic = ["version"]
authors = [
  { name="Jan Devátý", email="jan.devaty@fsv.cvut.cz" },
  { name="Jonas Lenz", email="jonas.lenz@iproconsult.com" },
]
description = "soilpulse-core is the backbone of SoilPulse metadata generation"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://soilpulse.github.io/"
Issues = "https://github.com/SoilPulse/MetadataGenerator/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[tool.setuptools_scm]
